--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,7 +22,7 @@ jobs:
           fetch-depth: 0
           
       - name: Setup NodeJS
-        uses: actions/setup-node@v1
+      - uses: actions/setup-node@v1
         with:
           node-version: 11
 
